# jarvis_arduino_bridge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: arduino.py  config.py  failsafe.py  ha_discovery.py  mqtt_client.py  service.py  state_store.py  utils.py  watchdog.py  web.py
